Removing conflicts
Removing conflicts between projects defining the same version of spring-boot-starter on both projects.