@@ -54,24 +54,24 @@
 			<optional>true</optional>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>br.com.camaroti.alex.emailSender</groupId>
-			<artifactId>emailSender</artifactId>
+			<groupId>br.com.camaroti.alex.emailsender</groupId>
+			<artifactId>emailsender</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		 
-		 <!-- ojdbc7.jar example -->
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc7</artifactId>
-            <version>12.1.0</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+		
+		<!-- ojdbc7.jar example -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>12.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -84,27 +84,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
-				<version>2.3.1</version>
 				<executions>
 					<execution>
 						<id>install-oracle-jdbc</id>
@@ -121,6 +102,17 @@
 							<createChecksum>true</createChecksum>
 							<file>${project.basedir}/src/main/resources/lib/ojdbc7.jar</file>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
